2010-08-09  Noel O'Boyle

	* test/aligntest.cpp: Enable all parts of the alignment test
	* src/math/align.cpp, include/openbabel/math/align.h: Use Tim's work
	on masked isomorphisms. Small speedups in caching and matrix code.

	All of the alignment tests now pass and do so quickly.

2010-08-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/CMakeLists.txt: Patch from Wayne Volkmuth to fix use of
	PYTHON_PREFIX PR#3038634.

	* scripts/openbabel-csharp.i: Fixed moduleclass error broken with
	upgrade to SWIG 2.0.0.

	* src/formats/moldenformat.cpp: Add "molf" extension found with
	some example files.

2010-08-03 Chris Morley

	* src/ops/opisomorph.cpp:-s replacement. Is used instead of
	original in transform.cpp. Takes a SMARTS string as before,
	but also a molecule file when the matching is done by Tim's
	new isomorphism code which is less restrictive, e.g. bug#3029478
	Also will color the substructure, mainly for svgformat.

	* src/CMakeLists.txt: add the above file

	* src/formats/fastsearchformat.cpp: rearraged to use the new -s
	as the main target specification.

2010-08-03  Noel O'Boyle

	* include/openbabel/generic.h: Don't clone OBRingData when copying a
	molecule. If you do, you'll end up with two RingDatas because one will
	already exist due to Kekulize() in EndModify() in operator= in OBMol.
	Having more than one RingData causes problems as one can become
	invalid.

2010-08-02 Chris Morley

	* include/openbabel/obmolecformat.h,src/obmolecformat.cpp
	(WriteChemObjectImpl) move the option implementation to a
	separate function so that it can be used externally...

	* src/formats/svgformat.cpp: ...like here.

2010-08-02 Chris Morley

	* src/descriptors/filters.cpp: add new formula descriptor

	* src/transform.cpp: remove --addformula, use --append formula
	  Make -s option do nothing if parameter is empty.

	* src/obmolecformat.cpp: add --addindex

	* src/parsmart.cpp:add onceOnly to SMARTS error

2010-08-02 Chris Morley
